tests and rafactor